# ShadowDate

./: .SRCINFO  .gitignore  AGENTS.md  Cargo.toml  PKGBUILD  README.md  REVIEW.md
resources/: 0xravenblack.shadowdata.desktop  com.ravenblack.shadowdate.desktop  style.css
src/: calendar_view.rs  form_dialog.rs  i18n.rs  images.rs  io_ics.rs  lib.rs  main.rs  model.rs
tests/: ics.rs
